/*
 * This Source Code Form is subject to the terms of the Mozilla Public
 * License, v. 2.0. If a copy of the MPL was not distributed with this
 * file, You can obtain one at https://mozilla.org/MPL/2.0/.
 *
 * Copyright (c) 2023-present, Ukama Inc.
 */

 syntax = "proto3";

 option go_package = "github.com/ukama/ukama/systems/common/pb/gen/events";

 package ukama.events.v1;

 message NodeStateChangeEvent {
    string nodeId = 1;
    string name   =2;
    string severity = 3;
    string type = 4;
    string currentState = 5;
  }